--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
       <div class="video-popup-inner">
          <i class="fas fa-times video-popup-close"></i>
          <div class="iframe-box">
-            <iframe id="player-1" src="https://www.youtube.com/embed/o1eY1MPcRQs"
+            <iframe id="player" src="https://www.youtube.com/embed/k7178L_UcMc"
                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                allowfullscreen></iframe>
          </div>
