--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
          <!-- Brand -->
-         <a class="navbar-brand" href="index.html">shala app</a>
+         <a class="navbar-brand" href="index.html">landing app</a>
 
          <!-- Toggler/collapsibe Button -->
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -181,6 +181,19 @@
       </div>
    </section>
    <!-- Fun Facts Section End -->
+
+   <!-- Video Popup Start -->
+   <div class="video-popup">
+      <div class="video-popup-inner">
+         <i class="fas fa-times video-popup-close"></i>
+         <div class="iframe-box">
+            <iframe id="player" src="https://www.youtube.com/embed/k7178L_UcMc"
+               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+               allowfullscreen></iframe>
+         </div>
+      </div>
+   </div>
+   <!-- Video Popup End ss -->
 
    <!-- App Screenshots Section Start -->
    <section class="app-screenshots section-padding" id="screenshots" data-scroll-index="2">
@@ -715,20 +728,6 @@
       <i class="fas"></i>
    </div>
    <!-- Toggle Theme End -->
-
-
-   <!-- Video Popup Start -->
-   <div class="video-popup">
-      <div class="video-popup-inner">
-         <i class="fas fa-times video-popup-close"></i>
-         <div class="iframe-box">
-            <iframe id="player" src="https://www.youtube.com/embed/k7178L_UcMc"
-               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-               allowfullscreen></iframe>
-         </div>
-      </div>
-   </div>
-   <!-- Video Popup End ss -->
 
 
    <!-- jquery js -->
